[package]
name = "money"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = {version = "0.4", features = ["serde"]}
tui = {version = "0.18", default-features = false, features = ["crossterm", "serde"]}
crossterm = {version = "0.23", features = ["serde"]}
unicode-width = "0.1"
clap = {version = "3.1", features = ["derive"] }